--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="shaders">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -114,9 +106,6 @@
     <ClInclude Include="model\include\ViewManagerEvents.h">
       <Filter>model\include</Filter>
     </ClInclude>
-    <ClInclude Include="physics\include\BSP.h">
-      <Filter>physics\include</Filter>
-    </ClInclude>
     <ClInclude Include="physics\include\Geometry.h">
       <Filter>physics\include</Filter>
     </ClInclude>
@@ -140,6 +129,18 @@
     </ClInclude>
     <ClInclude Include="model\include\RenderBuffers.h">
       <Filter>model\include</Filter>
+    </ClInclude>
+    <ClInclude Include="physics\include\Cube.h">
+      <Filter>physics\include</Filter>
+    </ClInclude>
+    <ClInclude Include="physics\include\OctNode.h">
+      <Filter>physics\include</Filter>
+    </ClInclude>
+    <ClInclude Include="physics\include\OctTree.h">
+      <Filter>physics\include</Filter>
+    </ClInclude>
+    <ClInclude Include="physics\include\OSP.h">
+      <Filter>physics\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -259,9 +260,6 @@
     <ClCompile Include="model\src\ViewManagerEvents.cpp">
       <Filter>model\src</Filter>
     </ClCompile>
-    <ClCompile Include="physics\src\BSP.cpp">
-      <Filter>physics\src</Filter>
-    </ClCompile>
     <ClCompile Include="physics\src\Geometry.cpp">
       <Filter>physics\src</Filter>
     </ClCompile>
@@ -285,6 +283,12 @@
     </ClCompile>
     <ClCompile Include="model\src\RenderBuffers.cpp">
       <Filter>model\src</Filter>
+    </ClCompile>
+    <ClCompile Include="physics\src\Cube.cpp">
+      <Filter>physics\src</Filter>
+    </ClCompile>
+    <ClCompile Include="physics\src\OSP.cpp">
+      <Filter>physics\src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
