--- a/ReBoot.vcxproj.filters
+++ b/ReBoot.vcxproj.filters
@@ -142,6 +142,9 @@
     <ClInclude Include="physics\include\OSP.h">
       <Filter>physics\include</Filter>
     </ClInclude>
+    <ClInclude Include="model\include\FunctionState.h">
+      <Filter>model\include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\normalShader.frag">
